Add cattpuccin theme

--- a/lab1/DE_IP_2024_Task_1.ipynb
+++ b/lab1/DE_IP_2024_Task_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5d62d24",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,16 @@
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40a56d12-cc0f-481d-b3c5-c2020a7d137b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from catppuccin.palette import PALETTE\n"
    ]
   },
   {
